--- a/static/styles.css
+++ b/static/styles.css
@@ -18,7 +18,7 @@ h3 {
 p {
     font-size:16px;
 }
-.topPic {
+#topPic {
     padding:0;
 }
 .photoContainer {
@@ -39,20 +39,21 @@ p {
 #nameSmall {
     position: relative;
     font-size:35px;
-    top: 150px;
+    top: 40%;
     text-align: center;
     color: white;
     font-family:raleway;
+
 }
 .picture {
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: url("./images/colorBackground.JPG");
+    background-image: url("./images/colorBackground1.jpg");
     position: relative;
     z-index: 1;
     left: 0;
     width: 100%;
-    height: 525px;
+    height: 100%;
     color: white;
 }
 .line {
@@ -189,12 +190,10 @@ h1:after {
 }
 .action-button
 {
-    position: relative;
-    top: 175px;
     padding: 5px 30px;
     margin: 0px 10px 10px 0px;
     border-radius: 10px;
-    font-family: 'Pacifico', cursive;
+    font-family: 'Pacifico';
     font-size: 25px;
     color: #FFF;
     text-decoration: none;  
