--- a/static/styles.css
+++ b/static/styles.css
@@ -173,14 +173,34 @@ h1:after {
  margin-right: -50%;
 }
 
-#navBar {
-    position: fixed;
-    bottom: 10px;
-    right: 10px;
+.arrow {
     background-color: black;
-    height: 20px;
-    width: 20px;
-    z-index: 1;
+    z-index: 3;
+    border-radius: 10px;
+    text-align:center;
+    vertical-align:middle;
+    width: 35px;
+    height: 35px;
+}
+.arrow:hover {
+    background-color: #a9a9a9;
+    cursor: pointer;
+}
+#upArrow {
+    position: fixed;
+    bottom: 75px;
+    right: 20px;
+}
+#downArrow {
+    position: fixed;
+    bottom: 35px;
+    right: 20px;
+}
+.navArrow {
+    font-size:16px;
+    padding-top:10px;
+    padding-left:1px;
+    color:white;
 }
 /*button sources from: https://codepen.io/cheeriottis/pen/inluv*/
 .animate
