--- a/static/styles.css
+++ b/static/styles.css
@@ -50,8 +50,11 @@ p {
 
 }
 #mobileNavButton {
-    background-color: #fff;
+    background-color: black;
     border-radius:4px;
+}
+.colorWhite {
+    color:white;
 }
 .topButtonContainers {
     text-align:center; 
@@ -249,12 +252,25 @@ h1:after {
     margin: 0px;
     padding: 0px;
 }
+.closeMobile {
+    text-align: left;
+    padding-left: 30px;
+    padding-top:15px;
+    font-weight:300;
+    height:40px;
+    font-size: 20px;
+}
 .dropdown-item {
-    font-size: 30px;
-    text-align: center;
-    background-color: whitesmoke;
-    border-bottom: 1px solid black;
-    height: 50px;
+    font-size: 20px;
+    text-align: left;
+    padding-left: 50px;
+    padding-top: 5px;
+    font-weight:300;
+    font-family: "open sans", helvetica, sans-serif;
+    border-bottom: 1px solid #eee;
+    height: 40px;
+    width:90%;
+    margin:auto;
 }
 #upArrow {
     position: fixed;
