--- a/static/styles.css
+++ b/static/styles.css
@@ -16,14 +16,16 @@ h3 {
     font-weight:bold;
 }
 p {
-    font-size:16px;
+    font-size:15px;
+    font-weight:300;
 }
 #topPic {
     padding:0;
 }
 #bioDescription {
-    font-size:20px;
+    font-size:16px;
     text-align:center;
+    font-weight:600;
 }
 #travelDescription {
     text-align:center; font-style:italic; font-weight:normal;
@@ -164,6 +166,7 @@ p {
     font-size: 16px;
     font-weight:bold;
     margin-top:2px;
+    margin-bottom:5px;
 }
 
 .space {
