--- a/static/styles.css
+++ b/static/styles.css
@@ -16,11 +16,15 @@ h3 {
     font-weight:bold;
 }
 p {
-    font-size:16px;
+    font-size:15px;
     font-weight:300;
 }
 #topPic {
     padding:0;
+}
+.mobilePadding {
+    padding-right:35px;
+    padding-left:35px;
 }
 #bioDescription {
     font-size:16px;
