--- a/static/styles.css
+++ b/static/styles.css
@@ -190,6 +190,15 @@ p {
 .contactTitle:after {
     background-color:white;
 }
+.mobileBottomImg {
+    height:70px;
+    width:70px;
+    display:inline-block;
+    margin-right:10px;
+    margin-left:10px;
+    margin-top:10px;
+    margin-bottom:10px;
+}
 .round {
     border-radius:100%;
     box-shadow: 0px 0px 10px gray;
@@ -216,7 +225,7 @@ p {
     background: -moz-linear-gradient(bottom right,  #274046, #E6DADA); /* For Firefox 3.6 to 15 */
     background: linear-gradient(to bottom right,  #274046, #E6DADA); /* Standard syntax (must be last) */
     padding-top: 10px;
-    padding-bottom: 40px;
+    padding-bottom: 10px;
     color:white;
 }
 .photo {
@@ -237,8 +246,11 @@ h2 {
     text-align:center;
     font-weight:lighter;
 }
+.standardMarginTop {
+    margin-top: 20px;
+}
 .bottomImg {
-    width:125px;
+    height:125px;
     width:125px;
     display:inline-block;
     margin-right:10px;
