--- a/static/styles.css
+++ b/static/styles.css
@@ -2,7 +2,7 @@
     margin: 0;
 }
 html * {
-   font-family: "open sans", helvetica, sans-serif;
+   font-family: arial;
 }
 a {
     text-decoration:none;
@@ -16,7 +16,6 @@ h3 {
 }
 p {
     font-size:16px;
-    font-weight:300;
 }
 #topPic {
     padding:0;
@@ -31,7 +30,7 @@ p {
     font-weight:600;
 }
 #travelDescription {
-    text-align:center; font-style:italic; font-weight:normal;
+    text-align:center; font-weight:normal; margin-bottom: 5px;
 }
 .articleLink {
     border: 1px solid gray;
